@@ -10,7 +10,9 @@ import it.gov.pagopa.afm.calculator.entity.Touchpoint;
 import it.gov.pagopa.afm.calculator.entity.ValidBundle;
 import it.gov.pagopa.afm.calculator.exception.AppException;
 import it.gov.pagopa.afm.calculator.model.PaymentOption;
+import it.gov.pagopa.afm.calculator.model.PaymentOptionMulti;
 import it.gov.pagopa.afm.calculator.model.PspSearchCriteria;
+import it.gov.pagopa.afm.calculator.model.TransferListItem;
 import it.gov.pagopa.afm.calculator.service.UtilityComponent;
 import it.gov.pagopa.afm.calculator.util.CriteriaBuilder;
 import org.apache.commons.lang3.StringUtils;
@@ -22,7 +24,6 @@ import org.springframework.stereotype.Repository;
 import org.springframework.util.CollectionUtils;
 
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import static it.gov.pagopa.afm.calculator.service.UtilityComponent.isGlobal;
@@ -43,6 +44,8 @@ public class CosmosRepository {
   
   private static final String ID_PSP_PARAM = "idPsp";
 
+  private static final String TRANSFER_CATEGORY_LIST = "transferCategoryList";
+
   /**
    * @param ciFiscalCode fiscal code of the CI
    * @param bundle a valid bundle
@@ -52,7 +55,7 @@ public class CosmosRepository {
     return bundle.getCiBundleList() != null
         ? bundle.getCiBundleList().parallelStream()
             .filter(ciBundle -> ciFiscalCode.equals(ciBundle.getCiFiscalCode()))
-            .collect(Collectors.toList())
+            .toList()
         : null;
   }
 
@@ -60,6 +63,105 @@ public class CosmosRepository {
   public List<ValidBundle> findByPaymentOption(PaymentOption paymentOption, boolean allCcp) {
     Iterable<ValidBundle> validBundles = findValidBundles(paymentOption, allCcp);
     return getFilteredBundles(paymentOption, validBundles);
+  }
+
+  @Cacheable(value = "findValidBundlesMulti")
+  public List<ValidBundle> findByPaymentOption(PaymentOptionMulti paymentOption, boolean allCcp) {
+    Iterable<ValidBundle> validBundles = findValidBundlesMulti(paymentOption, allCcp);
+    return getFilteredBundlesMulti(paymentOption, validBundles);
+  }
+
+  /**
+   * Null value are ignored -> they are skipped when building the filters
+   *
+   * @param paymentOptionMulti Get the Body of the Request
+   * @return the filtered bundles
+   */
+  private Iterable<ValidBundle> findValidBundlesMulti(PaymentOptionMulti paymentOptionMulti, boolean allCcp) {
+
+    // add filter by Payment Amount: minPaymentAmount <= paymentAmount < maxPaymentAmount
+    var minFilter =
+        CriteriaBuilder.lessThan("minPaymentAmount", paymentOptionMulti.getPaymentAmount());
+    var maxFilter =
+        CriteriaBuilder.greaterThanEqual("maxPaymentAmount", paymentOptionMulti.getPaymentAmount());
+    var queryResult = and(minFilter, maxFilter);
+    // add filter by Touch Point: touchpoint=<value> || touchpoint==null
+    if (paymentOptionMulti.getTouchpoint() != null
+        && !paymentOptionMulti.getTouchpoint().equalsIgnoreCase("any")) {
+      var touchpointNameFilter = isEqualOrAny("name", paymentOptionMulti.getTouchpoint());
+      Iterable<Touchpoint> touchpoint =
+          cosmosTemplate.find(
+              new CosmosQuery(touchpointNameFilter), Touchpoint.class, "touchpoints");
+
+      if (Iterables.size(touchpoint) == 0) {
+        throw new AppException(
+            HttpStatus.NOT_FOUND,
+            "Touchpoint not found",
+            "Cannot find touchpont with name: '" + paymentOptionMulti.getTouchpoint() + "'");
+      }
+
+      var touchpointFilter = isEqualOrAny("touchpoint", touchpoint.iterator().next().getName());
+      queryResult = and(queryResult, touchpointFilter);
+    }
+
+    // add filter by Payment Method: paymentMethod=<value> || paymentMethod==null
+    if (paymentOptionMulti.getPaymentMethod() != null
+        && !paymentOptionMulti.getPaymentMethod().equalsIgnoreCase("any")) {
+      var paymentTypeNameFilter = isEqualOrNull("name", paymentOptionMulti.getPaymentMethod());
+      Iterable<PaymentType> paymentType =
+          cosmosTemplate.find(
+              new CosmosQuery(paymentTypeNameFilter), PaymentType.class, "paymenttypes");
+
+      if (Iterables.size(paymentType) == 0) {
+        throw new AppException(
+            HttpStatus.NOT_FOUND,
+            "PaymentType not found",
+            "Cannot find payment type with name: '" + paymentOptionMulti.getPaymentMethod() + "'");
+      }
+
+      var paymentTypeFilter = isEqualOrNull("paymentType", paymentType.iterator().next().getName());
+      queryResult = and(queryResult, paymentTypeFilter);
+    }
+
+    // add filter by PSP: psp in list
+    Iterator<PspSearchCriteria> iterator =
+        Optional.ofNullable(paymentOptionMulti.getIdPspList())
+            .orElse(Collections.<PspSearchCriteria>emptyList())
+            .iterator();
+    if (iterator.hasNext()) {
+      queryResult = this.getPspFilterCriteria(queryResult, iterator);
+    }
+
+    // add filter by Transfer Category: transferCategory[] contains one of paymentOption
+    List<String> categoryListMulti = utilityComponent.getTransferCategoryList(paymentOptionMulti);
+    if (categoryListMulti != null) {
+      var taxonomyFilter =
+          categoryListMulti.parallelStream()
+              .filter(Objects::nonNull)
+              .filter(elem -> !elem.isEmpty())
+              .map(elem -> arrayContains(TRANSFER_CATEGORY_LIST, elem))
+              .reduce(CriteriaBuilder::or);
+
+      if (taxonomyFilter.isPresent()) {
+        var taxonomyOrNull = or(taxonomyFilter.get(), isNull(TRANSFER_CATEGORY_LIST));
+        queryResult = and(queryResult, taxonomyOrNull);
+      }
+    }
+
+    // add filter for Poste bundles
+    if (!allCcp) {
+      var allCcpFilter = isNotEqual(ID_PSP_PARAM, pspPosteId);
+      queryResult = and(queryResult, allCcpFilter);
+    }
+
+    // add filter for PSP whitelist
+    if (!CollectionUtils.isEmpty(pspWhitelist)) {
+      var pspIn = in(ID_PSP_PARAM, pspWhitelist);
+      queryResult = and(queryResult, pspIn);
+    }
+
+    // execute the query
+    return cosmosTemplate.find(new CosmosQuery(queryResult), ValidBundle.class, "validbundles");
   }
 
   /**
@@ -131,11 +233,11 @@ public class CosmosRepository {
           categoryList.parallelStream()
               .filter(Objects::nonNull)
               .filter(elem -> !elem.isEmpty())
-              .map(elem -> arrayContains("transferCategoryList", elem))
+              .map(elem -> arrayContains(TRANSFER_CATEGORY_LIST, elem))
               .reduce(CriteriaBuilder::or);
 
       if (taxonomyFilter.isPresent()) {
-        var taxonomyOrNull = or(taxonomyFilter.get(), isNull("transferCategoryList"));
+        var taxonomyOrNull = or(taxonomyFilter.get(), isNull(TRANSFER_CATEGORY_LIST));
         queryResult = and(queryResult, taxonomyOrNull);
       }
     }
@@ -159,6 +261,33 @@ public class CosmosRepository {
   /**
    * These filters are done with Java (not with cosmos query)
    *
+   * @param paymentOptionMulti the request
+   * @param validBundles the valid bundles
+   * @return the GLOBAL bundles and PRIVATE|PUBLIC bundles of the CI
+   */
+  private List<ValidBundle> getFilteredBundlesMulti(
+      PaymentOptionMulti paymentOptionMulti, Iterable<ValidBundle> validBundles) {
+
+    // marca da bollo digitale check
+    List<TransferListItem> transferList = new ArrayList<>();
+    paymentOptionMulti.getPaymentNotice().forEach(paymentNoticeItem -> transferList.addAll(paymentNoticeItem.getTransferList()));
+    var onlyMarcaBolloDigitale =
+        transferList.stream()
+            .filter(Objects::nonNull)
+            .filter(elem -> Boolean.TRUE.equals(elem.getDigitalStamp()))
+            .count();
+    var transferListSize = transferList.size();
+
+    return StreamSupport.stream(validBundles.spliterator(), true)
+        .filter(bundle -> digitalStampFilter(transferListSize, onlyMarcaBolloDigitale, bundle))
+        // Gets the GLOBAL bundles and PRIVATE|PUBLIC bundles of the CI
+        .filter(bundle -> globalAndRelatedFilter(paymentOptionMulti, bundle))
+        .toList();
+  }
+
+  /**
+   * These filters are done with Java (not with cosmos query)
+   *
    * @param paymentOption the request
    * @param validBundles the valid bundles
    * @return the GLOBAL bundles and PRIVATE|PUBLIC bundles of the CI
@@ -176,7 +305,7 @@ public class CosmosRepository {
         .filter(bundle -> digitalStampFilter(transferListSize, onlyMarcaBolloDigitale, bundle))
         // Gets the GLOBAL bundles and PRIVATE|PUBLIC bundles of the CI
         .filter(bundle -> globalAndRelatedFilter(paymentOption, bundle))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
@@ -218,6 +347,35 @@ public class CosmosRepository {
     bundle.setCiBundleList(filterByCI(paymentOption.getPrimaryCreditorInstitution(), bundle));
     return isGlobal(bundle) || belongsCI(bundle);
   }
+
+  /**
+   * Gets the GLOBAL bundles and PRIVATE|PUBLIC bundles of the CI
+   *
+   * @param paymentOptionMulti the request
+   * @param bundle a valid bundle
+   * @return True if the valid bundle meets the criteria.
+   */
+  private static boolean globalAndRelatedFilter(PaymentOptionMulti paymentOptionMulti, ValidBundle bundle) {
+    // filter the ci-bundle list
+    bundle.setCiBundleList(filteredCiBundles(paymentOptionMulti, bundle));
+    return isGlobal(bundle) || belongsCI(bundle);
+  }
+
+  /**
+   * Check if all the ci fiscal codes in the payment notice are present in the ciBundle
+   *
+   * @param paymentOptionMulti the request
+   * @param bundle a valid bundle
+   * @return empty list if at least one element is not present, otherwise the full list
+   */
+  private static List<CiBundle> filteredCiBundles(PaymentOptionMulti paymentOptionMulti, ValidBundle bundle) {
+    List<String> ciBundlesFiscalCodes = new ArrayList<>();
+    bundle.getCiBundleList().forEach(ciBundle -> ciBundlesFiscalCodes.add(ciBundle.getCiFiscalCode()));
+    boolean allCiBundlesPresent = paymentOptionMulti.getPaymentNotice().stream()
+        .anyMatch(paymentNoticeItem -> ciBundlesFiscalCodes.contains(paymentNoticeItem.getPrimaryCreditorInstitution()));
+    return allCiBundlesPresent ? bundle.getCiBundleList() : new ArrayList<>();
+  }
+
 
   /**
    * @param bundle a valid bundle
